--- a/birthday-invitation/package.json
+++ b/birthday-invitation/package.json
@@ -10,11 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-icons": "^5.4.0",
-    "react-motion": "^0.5.2",
-    "react-text-loop": "^2.1.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
